--- a/tree_util/projects/templates/displayproject.html
+++ b/tree_util/projects/templates/displayproject.html
@@ -1,146 +1,5 @@
 {% extends "base.html" %}
 {% block page_content %}
-    <style>
-        .tree {
-            size: 100%;
-            border: 2px solid;
-            padding: 4px;
-            margin: 4px;
-        }
-        .editedhighlight {
-            border: 4px solid;
-            border-color: red;
-        }
-        .images {
-            size: 100%;
-            overflow-x: scroll;
-            border: 1px solid lightgray;
-            padding: 4px;
-            margin: 4px;
-        }
-        .imgparent {
-            white-space: nowrap;
-            height: 200px;
-        }
-        .svgimage {
-            display: inline-block;
-            height: 100%;
-        }
-        svg {
-            font-size: 8px !important;
-            height: 100% !important;
-            width: 100% !important;
-        }
-        .highlighter {
-            display: inline-block;
-            height: 100%;
-        }
-        img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-        .magnifybar {
-            margin: 0 auto;
-            width: 200px;
-        }
-        /* Context menu */
-        #context-menu, #context-menu-circle {
-            position: fixed;
-            z-index: 10000;
-            width: 150px;
-            background: #bfbdbd;
-            border-top: 1px solid black;
-            border-left: 1px solid black;
-            border-right: 1px solid black;
-            /* border-radius: 5px; */
-            transform: scale(0);
-            transform-origin: top left;
-        }
-
-        #context-menu.visible, #context-menu-circle.visible {
-            transform: scale(1);
-            transition: transform 200ms ease-in-out;
-        }
-
-        #context-menu .item, #context-menu-circle .item {
-            padding: 8px 10px;
-            font-size: 15px;
-            color: #eee;
-            cursor: pointer;
-            border-bottom: 1px solid black;
-            border-radius: inherit;
-        }
-
-        #context-menu .item:hover, #context-menu-circle .item:hover {
-            opacity: 1.0;
-            background: #c7c9c9
-        }
-
-        .dot {
-            height: 16px;
-            width: 16px;
-            /* background-color: #bbb; */
-            border-radius: 50%;
-            display: inline-block;
-            pointer-events:none;
-        }
-
-        .rectangle {
-            height: 16px;
-            width: 30px;
-            margin:auto;
-            display: inline-block;
-            vertical-align: middle;
-            pointer-events:none;
-            background-color: transparent !important;
-        }
-
-        .Red {
-            background-color: Red;
-            border: 1px solid Red;
-        }
-        .Yellow {
-            background-color: #efe645;
-            border: 1px solid #efe645;
-        }
-        .Pink {
-            background-color: #e935a1;
-            border: 1px solid #e935a1;
-        }
-        .Lightblue {
-            background-color: #00e3ff;
-            border: 1px solid #00e3ff;
-        }
-        .Orange {
-            background-color: orange;
-            border: 1px solid orange;
-        }
-        .Neonblue {
-            background-color: #537eff;
-            border: 1px solid #537eff;
-        }
-        .Green {
-            background-color: #00cb85;
-            border: 1px solid #00cb85;
-        }
-        #slider-range {
-            background-image: linear-gradient(to right, yellow , red);
-            width: 600px;
-            display: inline-block;
-            margin-left: 10px;
-            margin-right: 10px;
-
-        }
-        #slidercontainer {
-            display: inline;
-            width: 100%;
-            margin-left: 10px;
-            margin-right: 10px;
-        }
-        .hide {
-            display: none;
-        }
-    </style>
 
     <script>
         var token = '{{csrf_token}}';
@@ -251,25 +110,57 @@
             //else: user is allowed to leave without a warning dialog
         });
 
+        function resizeHighlighterWidth(imgparentid, adjustment) {
+            var imgheight = $('#' + imgparentid).find('img').prop("naturalHeight");
+            var imgwidth = $('#' + imgparentid).find('img').prop("naturalWidth");
+            var imgratio = imgwidth/imgheight;
+            var imgimagewidth = adjustment * imgratio;
+            $('#' + imgparentid).find('.highlighter').width(imgimagewidth);
+        }
+
+        function resizeSVGWidth(imgparentid, adjustment) {
+            var svgheight = $('#' + imgparentid).find('svg').attr('height');
+            var svgwidth = $('#' + imgparentid).find('svg').attr('width');
+            var svgratio = svgwidth/svgheight;
+            var svgimagewidth = adjustment * svgratio;
+            $('#' + imgparentid).find('.svgimage').width(svgimagewidth);
+        }
+
         $(document).ready(function() {
             $( ".fullsize" ).on( "click", function() {
                 var imgparentid = $(this).attr('id').replace("full-", "");
-                $('#' + imgparentid).height($('.imgparent').find('svg').attr('height'));
+                var svgoriginalheight = $('#' + imgparentid).find('svg').attr('height');
+                $('#' + imgparentid).height(svgoriginalheight);
+                resizeSVGWidth(imgparentid, svgoriginalheight);
+                resizeHighlighterWidth(imgparentid, svgoriginalheight);
             });
             $( ".minsize" ).on( "click", function() {
                 var imgparentid = $(this).attr('id').replace("min-", "");
-                $('#' + imgparentid).height(200);
+                var minheight = 200;
+                $('#' + imgparentid).height(minheight);
+                resizeSVGWidth(imgparentid, minheight);
+                resizeHighlighterWidth(imgparentid, minheight);
             });
             $( ".zoomin" ).on( "click", function() {
                 var imgparentid = $(this).attr('id').replace("zin-", "");
                 var currentheight = $('#' + imgparentid).height();
                 var increase = currentheight * 1.1;
+                resizeSVGWidth(imgparentid, increase);
+                resizeHighlighterWidth(imgparentid, increase);
                 $('#' + imgparentid).height(increase);
             });
             $( ".zoomout" ).on( "click", function() {
                 var imgparentid = $(this).attr('id').replace("zout-", "");
                 var currentheight = $('#' + imgparentid).height();
                 var decrease = currentheight * .9;
+
+                var svgheight = $('#' + imgparentid).find('svg').attr('height');
+                var svgwidth = $('#' + imgparentid).find('svg').attr('width');
+                var svgratio = svgwidth/svgheight;
+                var svgimagewidth = decrease * svgratio;
+                $('#' + imgparentid).find('.svgimage').width(svgimagewidth);
+                resizeSVGWidth(imgparentid, decrease);
+                resizeHighlighterWidth(imgparentid, decrease);
                 $('#' + imgparentid).height(decrease);
             });
             $( "#saveall" ).on( "click", function() {
@@ -347,6 +238,69 @@
                 setAllDirtyUnsaved();
             }
 
+            $("#downloadproject").click(function() {
+                // disable button
+                $(this).prop("disabled", true);
+                // add spinner to button
+                $(this).html(
+                `<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span> Downloading...`
+                );
+                var downloadBtn = $(this);
+                var xhr = new XMLHttpRequest();
+                xhr.open('GET', '/projects/files/download/{{ project }}', true);
+                xhr.responseType = 'arraybuffer';
+
+                xhr.onload = function(e) {
+                    if (this.status == 200) {
+                        // check for a filename
+                        var filename = "";
+                        var disposition = xhr.getResponseHeader('Content-Disposition');
+                        if (disposition && disposition.indexOf('attachment') !== -1) {
+                            var filenameRegex = /filename[^;=\n]*=((['"]).*?\2|[^;\n]*)/;
+                            var matches = filenameRegex.exec(disposition);
+                            if (matches !== null && matches[1]) filename = matches[1].replace(/['"]/g, '');
+                        }
+
+                        var type = xhr.getResponseHeader('Content-Type');
+                        console.log("type", type);
+                        var blob = new Blob([xhr.response], { type: type });
+
+                        if (typeof window.navigator.msSaveBlob !== 'undefined') {
+                            // IE workaround for "HTML7007: One or more blob URLs were revoked by closing the blob for which they were created. These URLs will no longer resolve as the data backing the URL has been freed."
+                            window.navigator.msSaveBlob(blob, filename);
+                        } else {
+                            var URL = window.URL || window.webkitURL;
+                            var downloadUrl = URL.createObjectURL(blob);
+
+                            if (filename) {
+                                // use HTML5 a[download] attribute to specify filename
+                                var a = document.createElement("a");
+                                // safari doesn't support this yet
+                                if (typeof a.download === 'undefined') {
+                                    window.location.href = downloadUrl;
+                                } else {
+                                    a.href = downloadUrl;
+                                    a.download = filename;
+                                    document.body.appendChild(a);
+                                    a.click();
+                                }
+                            } else {
+                                window.location.href = downloadUrl;
+                            }
+
+                            setTimeout(function () { URL.revokeObjectURL(downloadUrl); }, 200); // cleanup
+                            downloadBtn.prop("disabled", false);
+                            downloadBtn.html('Download Project Files');
+                        }
+                    }
+                };
+                xhr.onerror = function () {
+                    downloadBtn.prop("disabled", false);
+                    downloadBtn.html('Download Project Files');
+                    alert("Download failed!");
+                };
+                xhr.send();
+            });
             ///////
             const contextMenu = document.getElementById("context-menu");
             const contextMenuCircle = document.getElementById("context-menu-circle");
@@ -681,24 +635,28 @@
             <div id="circlegreen"  class="item"><span class="dot Green"></span>&nbsp;&nbsp;Green</div>
             <div id="circleremove"  class="item">Remove</div>
         </div>
-
-        <p>&nbsp;{{ user.username }} <a href="{% url 'logout' %}">logout</a></p>
-        <p>&nbsp;<b>{{ project }}</b> ({{ entries | length }} trees)</p>
-<!--        <p>-->
-<!--            <label for="amount">Price range:</label>-->
-<!--            <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">-->
-<!--        </p>-->
-        <div id="slidercontainer">
-            <span>Number of sequences color range:&nbsp;&nbsp;</span>
-            <label for="min">Min(cutoff):</label><input type="number" id="min" name="min" min="1" max="500"  value="2" style="width: 4em">
-            <div id="slider-range"></div>
-            <label for="max">Max(threshold >=):</label><input type="number" id="max" name="max" min="2" max="500" value="50" style="width: 4em">
-            <button type="button" id="sequencecolor">Update</button>
-            <button type="button" id="removesequencecolor">Remove</button>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button type="button" id="saveall">Save All</button>
-        </div>
-        <div id="saveallprog" class="progress hide">
-            <div id="progressBar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-auto align-self-center"><a href="/projects">Projects</a> &gt; <b>{{ project }}</b>&nbsp;({{ entries | length }} trees)</div>
+                <div class="col-auto mr-auto align-self-center"><button type="button" id="downloadproject" class="btn btn-outline-primary btn-sm">Download Project Files</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-auto mr-auto"><span>Number of sequences color range:&nbsp;&nbsp;</span></div>
+            </div>
+            <div class="row">
+                <div class="col-auto mr-auto text-nowrap">
+                    <label for="min">Min(cutoff):</label><input type="number" id="min" name="min" min="1" max="500"  value="2" style="width: 4em">
+                    <div id="slider-range"></div>
+                    <label for="max">Max(threshold >=):</label><input type="number" id="max" name="max" min="2" max="500" value="50" style="width: 4em">
+                    <button type="button"  class="btn btn-outline-secondary btn-sm" id="sequencecolor">Update</button>
+                    <button type="button" class="btn btn-outline-secondary btn-sm" id="removesequencecolor">Remove</button>
+                </div>
+                <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm" id="saveall">Save All</button></div>
+            </div>
+            <div id="saveallprog" class="progress hide">
+                <div id="progressBar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+            </div>
         </div>
         <form method="post">
         {% for entry in entries %}
@@ -706,10 +664,10 @@
             <h6>{{ entry.uniquesvg }}</h6>
             <div class="notes" id="notes-{{ entry.uniquesvg }}"></div>
             <div class="magnifybar">
-               <button type="button" class="fullsize" id="full-{{ entry.uniquesvg }}"> Full</button>
-               <button type="button" class="minsize"  id="min-{{ entry.uniquesvg }}"> Min</button>
-               <button type="button" class="zoomin"  id="zin-{{ entry.uniquesvg }}"> +</button>
-               <button type="button" class="zoomout"  id="zout-{{ entry.uniquesvg }}"> -</button>
+                <button type="button" class="fullsize btn btn-outline-secondary btn-sm" id="full-{{ entry.uniquesvg }}"> Full</button>
+                <button type="button" class="minsize btn btn-outline-secondary btn-sm"  id="min-{{ entry.uniquesvg }}"> Min</button>
+                <button type="button" class="zoomin btn btn-outline-secondary btn-sm"  id="zin-{{ entry.uniquesvg }}"><i class="fas fa-search-plus"></i></button>
+                <button type="button" class="zoomout btn btn-outline-secondary btn-sm"  id="zout-{{ entry.uniquesvg }}"><i class="fas fa-search-minus"></i></button>
             </div>
             <div class="images">
                 <div class='imgparent' id='{{ entry.uniquesvg }}'>
