Read-only permissions and uw_saml.

--- a/phylobook/static/css/phylobook.css
+++ b/phylobook/static/css/phylobook.css
@@ -12,6 +12,9 @@
 .dropdown-menu {
     font-size: .85rem;
 }
+.reg-dialog {
+    width: 600px;
+}
 .btn:focus {
     outline: none;
     box-shadow: none;
