--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -1,8 +1,16 @@
 {% extends "base.html" %}
 {% block page_content %}
 
+{% load static %}
+{% load guardian_tags %}
+{% get_obj_perms request.user for project_obj as "context_perms" %}
+{% if "change_project" in context_perms %}
+    <script src="{% static 'script/phylobook.js' %}"></script>
+{% endif %}
+    <script src="{% static 'script/phylobookview.js' %}"></script>
     <script>
         var token = '{{csrf_token}}';
+        var projectName = '{{ project }}';
     </script>
 
     {% if user.is_authenticated %}
@@ -41,10 +49,14 @@
                     <label for="min">Min(cutoff):</label><input type="number" id="min" name="min" min="1" max="500"  value="2" style="width: 4em">
                     <div id="slider-range"></div>
                     <label for="max">Max(threshold >=):</label><input type="number" id="max" name="max" min="2" max="500" value="50" style="width: 4em">
+                    {% if 'change_project' in context_perms %}
                     <button type="button"  class="btn btn-outline-secondary btn-sm" id="sequencecolor">Update</button>
                     <button type="button" class="btn btn-outline-secondary btn-sm" id="removesequencecolor">Remove</button>
+                    {% endif %}
                 </div>
+                {% if 'change_project' in context_perms %}
                 <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm" id="saveall">Save All</button></div>
+                {% endif %}
             </div>
             <div id="saveallprog" class="progress hide">
                 <div id="progressBar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
@@ -54,7 +66,7 @@
         {% for entry in entries %}
             <div class="tree">
             <h6>{{ entry.uniquesvg }}</h6>
-            <div class="notes" id="notes-{{ entry.uniquesvg }}"></div>
+            <div {% if 'change_project' in context_perms %} class="notes" {% endif %} id="notes-{{ entry.uniquesvg }}"></div>
             <div class="magnifybar">
                 <button type="button" class="fullsize btn btn-outline-secondary btn-sm" id="full-{{ entry.uniquesvg }}"> Full</button>
                 <button type="button" class="minsize btn btn-outline-secondary btn-sm"  id="min-{{ entry.uniquesvg }}"> Min</button>
