--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
     <br>
     <br>
     <div  class="row justify-content-center">
-      <div  class="col-4">
+      <div  class="reg-dialog">
         <div class="card">
           <div class="card-body">
             <h4 class="card-title titlefont">Log in to your account</h4>
@@ -22,12 +22,4 @@
         </div>
       </div>
     </div>
-<!--
-<h2>Phylobook Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
--->
 {% endblock %}
