--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,9 +3,10 @@
 {% load crispy_forms_tags %}
 
 {% block page_content %}
+    <br>
+    <br>
     <div  class="row justify-content-center">
-      <div  class="col-4">
-        <h1  class="text-center">Phylobook</h1>
+      <div  class="reg-dialog">
         <div  class="card">
             <div  class="card-body text-center">
             <h4  class="card-title"> Password changed <span style="color: green;">successfully</span>!</h4>
