--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -3,8 +3,10 @@
 {% load crispy_forms_tags %}
 
 {% block page_content %}
+    <br>
+    <br>
     <div  class="row justify-content-center">
-      <div  class="col-4">
+      <div  class="reg-dialog">
         <div  class="card">
             <div  class="card-body">
             <h4  class="card-title"> Change your password</h4>
