--- a/templates/registration/password_reset.html
+++ b/templates/registration/password_reset.html
@@ -5,10 +5,9 @@
 {% block page_content %}
     <br>
     <br>
-
 	<!--Reset Password-->
     <div  class="row justify-content-center">
-      <div  class="col-4">
+      <div  class="reg-dialog">
         <div  class="card">
             <div  class="card-body">
             <h4  class="card-title">Reset your password</h4>
