--- a/phylobook/static/css/phylobook.css
+++ b/phylobook/static/css/phylobook.css
@@ -1,3 +1,6 @@
+.app-container{
+    min-width: 883px;
+}
 .titlefont {
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -19,6 +22,9 @@
     outline: none;
     box-shadow: none;
 }
+.disabled {
+    cursor: not-allowed;
+}
 a, a:hover,a:visited, a:focus {
     text-decoration:none;
 }
@@ -33,6 +39,7 @@ a, a:hover,a:visited, a:focus {
     border: 2px solid;
     padding: 4px;
     margin: 4px;
+    min-width: 883px;
 }
 .editedhighlight {
     border: 4px solid;
@@ -150,7 +157,7 @@ img {
     background-color: #00cb85;
     border: 1px solid #00cb85;
 }
-#slider-range {
+.slider-range {
     background-image: linear-gradient(to right, yellow , red);
     width: 300px;
     display: inline-block;
