--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -11,6 +11,20 @@
     <script>
         var token = '{{csrf_token}}';
         var projectName = '{{ project }}';
+
+        function rgb(r, g, b){
+            return ["rgb(",r,",",g,",",b,")"].join("");
+        }
+        function pickHex(color1, color2, weight) {
+            var p = weight;
+            var w = p * 2 - 1;
+            var w1 = (w/1+1) / 2;
+            var w2 = 1 - w1;
+            var rgb = [Math.round(color1[0] * w1 + color2[0] * w2),
+                Math.round(color1[1] * w1 + color2[1] * w2),
+                Math.round(color1[2] * w1 + color2[2] * w2)];
+            return rgb;
+        }
     </script>
 
     {% if user.is_authenticated %}
@@ -41,23 +55,21 @@
                 <div class="col-auto mr-auto align-self-center"><button type="button" id="downloadproject" class="btn btn-outline-primary btn-sm">Download Project Files</button>
                 </div>
             </div>
+            {% if 'change_project' in context_perms %}
             <div class="row">
-                <div class="col-auto mr-auto"><span>Number of sequences color range:&nbsp;&nbsp;</span></div>
+                <div class="col-auto mr-auto"><span>Number of sequences color range (all trees):&nbsp;&nbsp;</span></div>
             </div>
             <div class="row">
                 <div class="col-auto mr-auto text-nowrap">
-                    <label for="min">Min(cutoff):</label><input type="number" id="min" name="min" min="1" max="500"  value="2" style="width: 4em">
+                    <label for="min">Min(cutoff):</label><input type="number" id="min" name="min" min="1" max="49000"  value="2" style="width: 4em">
                     <div class="slider-range" id="slider-range"></div>
-                    <label for="max">Max(threshold >=):</label><input type="number" id="max" name="max" min="2" max="500" value="50" style="width: 4em">
-                    {% if 'change_project' in context_perms %}
+                    <label for="max">Max(threshold >=):</label><input type="number" id="max" name="max" min="2" max="50000" value="50" style="width: 4em">
                     <button type="button"  class="btn btn-outline-secondary btn-sm sequencecolor" id="sequencecolor">Update All</button>
                     <button type="button" class="btn btn-outline-secondary btn-sm removesequencecolor" id="removesequencecolor">Remove All</button>
-                    {% endif %}
                 </div>
-                {% if 'change_project' in context_perms %}
                 <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm" id="saveall">Save All</button></div>
-                {% endif %}
             </div>
+            {% endif %}
             <div id="saveallprog" class="progress hide">
                 <div id="progressBar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
             </div>
@@ -65,63 +77,72 @@
         <form method="post">
         {% for entry in entries %}
             <div class="tree">
-            <h6>{{ entry.uniquesvg }}</h6>
-            <div class="row">
-                <div class="col-auto mr-auto text-nowrap">
-                    <label for="min-{{ entry.uniquesvg }}">Min(cutoff):</label><input type="number" class="min" id="min-{{ entry.uniquesvg }}" name="min" min="1" max="500"  value="2" style="width: 4em">
-                    <div class="slider-range" id="slider-range-{{ entry.uniquesvg }}"></div>
-                    <label for="max-{{ entry.uniquesvg }}">Max(threshold >=):</label><input type="number" class="max" id="max-{{ entry.uniquesvg }}" name="max" min="2" max="500" value="50" style="width: 4em">
+                <div class="row" style="height: 32px">
+                    <div class="col-auto mr-auto text-nowrap ">
+                        <h6>{{ entry.uniquesvg }}</h6>
+                    </div>
                     {% if 'change_project' in context_perms %}
-                    <button type="button"  class="btn btn-outline-secondary btn-sm sequencecolor" id="sequencecolor-{{ entry.uniquesvg }}">Update</button>
-                    <button type="button" class="btn btn-outline-secondary btn-sm removesequencecolor" id="removesequencecolor-{{ entry.uniquesvg }}">Remove</button>
+                    <div class="col-auto"><a href="#" onclick="showhideColorRange('color-{{ entry.uniquesvg }}', this); return false;" class="seqcolor">Show color range</a>&nbsp;<button type="button" class="btn btn-outline-primary btn-sm save disabled" id="save-{{ entry.uniquesvg }}" disabled>Save</button></div>
                     {% endif %}
-                    <script>
-                    // Slider/colorization functions
-                    $( function() {
-                        $( "#slider-range-{{ entry.uniquesvg }}" ).slider({
-                            range: true,
-                            min: 1,
-                            max: 100,
-                            values: [ 1, 100 ],
-                            create: function( event, ui ) {
-                                // color between rage sliders
-                                var markers=$(this).slider('values');
-                                minColor = pickHex([255, 0, 0], [255, 255, 0], markers[ 0 ]/100);
-                                maxColor = pickHex([255, 0, 0], [255, 255, 0], markers[ 1 ]/100);
-                                $( "#slider-range-{{ entry.uniquesvg }} .ui-slider-range" ).css("background-image", "linear-gradient(to right, " + rgb(minColor[0],minColor[1],minColor[2]) + ", " + rgb(maxColor[0],maxColor[1],maxColor[2]) + ")");
-                            },
-                            slide: function( event, ui ) {
-                                $( "#amount" ).val( "$" + ui.values[ 0 ] + " - $" + ui.values[ 1 ] );
-                                // color between rage sliders
-                                minColor = pickHex([255, 0, 0], [255, 255, 0], ui.values[ 0 ]/100);
-                                maxColor = pickHex([255, 0, 0], [255, 255, 0], ui.values[ 1 ]/100);
-                                $( "#slider-range-{{ entry.uniquesvg }} .ui-slider-range" ).css("background-image", "linear-gradient(to right, " + rgb(minColor[0],minColor[1],minColor[2]) + ", " + rgb(maxColor[0],maxColor[1],maxColor[2]) + ")");
-                            }
+                </div>
+                <div class="row {% if 'change_project' in context_perms %} hide {% endif %}"  id="color-{{ entry.uniquesvg }}">
+                    <div class="col-auto mr-auto text-nowrap">
+                        <label for="min-{{ entry.uniquesvg }}">{% if "change_project" not in context_perms %} Sequence count: {% endif %}Min(cutoff):</label><input type="number" class="min" id="min-{{ entry.uniquesvg }}" name="min" min="1" max="49999" {% if entry.minval %} value="{{ entry.minval }}" {% else %} value="2" {% endif %} style="width: 4em;" {% if "change_project" not in context_perms %} disabled {% endif %}>
+                        <div class="slider-range" id="slider-range-{{ entry.uniquesvg }}"></div>
+                        <label for="max-{{ entry.uniquesvg }}">Max(threshold >=):</label><input type="number" class="max" id="max-{{ entry.uniquesvg }}" name="max" min="2" max="50000"  {% if entry.maxval %} value="{{ entry.maxval }}" {% else %} value="50" {% endif %} style="width: 4em;" {% if "change_project" not in context_perms %} disabled {% endif %}>
+                        {% if 'change_project' in context_perms %}
+                        <button type="button"  class="btn btn-outline-secondary btn-sm sequencecolor" id="sequencecolor-{{ entry.uniquesvg }}">Update</button>
+                        <button type="button" class="btn btn-outline-secondary btn-sm removesequencecolor" id="removesequencecolor-{{ entry.uniquesvg }}">Remove</button>
+                        {% endif %}
+                        <input type="hidden" class="minval" id="minval-{{ entry.uniquesvg }}" value="{{ entry.minval }}"/>
+                        <input type="hidden" class="maxval" id="maxval-{{ entry.uniquesvg }}" value="{{ entry.maxval }}"/>
+                        <input type="hidden" class="colorlowval" id="colorlowval-{{ entry.uniquesvg }}" value="{{ entry.colorlowval }}"/>
+                        <input type="hidden" class="colorhighval" id="colorhighval-{{ entry.uniquesvg }}" value="{{ entry.colorhighval }}"/>
+                        <input type="hidden" class="iscolored" id="iscolored-{{ entry.uniquesvg }}" value="{{ entry.iscolored }}"/>
+                        <script>
+                        // Slider/colorization functions
+                        $( function() {
+                            $( "#slider-range-{{ entry.uniquesvg }}" ).slider({
+                                range: true,
+                                {% if "change_project" not in context_perms %} disabled: true, {% endif %}
+                                min: 1,
+                                max: 100,
+                                values: {% if entry.colorlowval and entry.colorhighval %} [ {{ entry.colorlowval }}, {{ entry.colorhighval }} ] {% else %} [ 1, 100 ] {% endif %},
+                                create: function( event, ui ) {
+                                    // color between rage sliders
+                                    var markers=$(this).slider('values');
+                                    minColor = pickHex([255, 0, 0], [255, 255, 0], markers[ 0 ]/100);
+                                    maxColor = pickHex([255, 0, 0], [255, 255, 0], markers[ 1 ]/100);
+                                    $( "#slider-range-{{ entry.uniquesvg }} .ui-slider-range" ).css("background-image", "linear-gradient(to right, " + rgb(minColor[0],minColor[1],minColor[2]) + ", " + rgb(maxColor[0],maxColor[1],maxColor[2]) + ")");
+                                },
+                                slide: function( event, ui ) {
+                                    // color between rage sliders
+                                    minColor = pickHex([255, 0, 0], [255, 255, 0], ui.values[ 0 ]/100);
+                                    maxColor = pickHex([255, 0, 0], [255, 255, 0], ui.values[ 1 ]/100);
+                                    $( "#slider-range-{{ entry.uniquesvg }} .ui-slider-range" ).css("background-image", "linear-gradient(to right, " + rgb(minColor[0],minColor[1],minColor[2]) + ", " + rgb(maxColor[0],maxColor[1],maxColor[2]) + ")");
+                                }
+                            });
                         });
-                    });
-                    </script>
+                        </script>
+                    </div>
                 </div>
-                {% if 'change_project' in context_perms %}
-                <div class="col-auto"><button type="button" class="btn btn-outline-primary btn-sm save disabled" id="save-{{ entry.uniquesvg }}" disabled>Save</button></div>
-                {% endif %}
-            </div>
-            <div {% if 'change_project' in context_perms %} class="notes" {% endif %} id="notes-{{ entry.uniquesvg }}"></div>
-            <div class="magnifybar">
-                <button type="button" class="fullsize btn btn-outline-secondary btn-sm" id="full-{{ entry.uniquesvg }}"> Full</button>
-                <button type="button" class="minsize btn btn-outline-secondary btn-sm"  id="minsize-{{ entry.uniquesvg }}"> Min</button>
-                <button type="button" class="zoomin btn btn-outline-secondary btn-sm"  id="zin-{{ entry.uniquesvg }}"><i class="fas fa-search-plus"></i></button>
-                <button type="button" class="zoomout btn btn-outline-secondary btn-sm"  id="zout-{{ entry.uniquesvg }}"><i class="fas fa-search-minus"></i></button>
-            </div>
-            <div class="images">
-                <div class='imgparent' id='{{ entry.uniquesvg }}'>
-                   <div class='svgimage'></div>
-                   <div class='highlighter'><img src="{{ entry.highlighter }}" /></div>
+                <div {% if 'change_project' in context_perms %} class="notes" {% endif %} id="notes-{{ entry.uniquesvg }}"></div>
+                <div class="magnifybar">
+                    <button type="button" class="fullsize btn btn-outline-secondary btn-sm" id="full-{{ entry.uniquesvg }}"> Full</button>
+                    <button type="button" class="minsize btn btn-outline-secondary btn-sm"  id="minsize-{{ entry.uniquesvg }}"> Min</button>
+                    <button type="button" class="zoomin btn btn-outline-secondary btn-sm"  id="zin-{{ entry.uniquesvg }}"><i class="fas fa-search-plus"></i></button>
+                    <button type="button" class="zoomout btn btn-outline-secondary btn-sm"  id="zout-{{ entry.uniquesvg }}"><i class="fas fa-search-minus"></i></button>
                 </div>
-            </div>
-            <script type="text/javascript">
-               $('#{{ entry.uniquesvg }}').find(".svgimage").load('{{ entry.svg }}');
-               $('#notes-' + "{{ entry.uniquesvg }}").load('/projects/note/read/{{ project }}/' + "{{ entry.uniquesvg }}" + ".notes.txt");
-            </script>
+                <div class="images">
+                    <div class='imgparent' id='{{ entry.uniquesvg }}'>
+                       <div class='svgimage'></div>
+                       <div class='highlighter'><img src="{{ entry.highlighter }}" /></div>
+                    </div>
+                </div>
+                <script type="text/javascript">
+                   $('#{{ entry.uniquesvg }}').find(".svgimage").load('{{ entry.svg }}');
+                   $('#notes-' + "{{ entry.uniquesvg }}").load('/projects/note/read/{{ project }}/' + "{{ entry.uniquesvg }}");
+                </script>
             </div>
         {% endfor %}
         </form>
