--- a/phylobook/static/css/phylobook.css
+++ b/phylobook/static/css/phylobook.css
@@ -39,11 +39,14 @@ a, a:hover,a:visited, a:focus {
     border: 2px solid;
     padding: 4px;
     margin: 4px;
-    min-width: 883px;
+    min-width: 980px;
 }
 .editedhighlight {
     border: 4px solid;
     border-color: red;
+}
+.seqcolor{
+    font-size: 14px;
 }
 .images {
     size: 100%;
@@ -163,6 +166,7 @@ img {
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
+    opacity: 1.0 !important;
 
 }
 .hide {
