Changed login page (added spacing), removed save success dialog, fixed major individual sequence coloring issues.

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,9 +11,9 @@
             <h4 class="card-title titlefont">Log in to your account</h4>
             {% if settings.LOGIN_TYPE == "dual" %}
               <a href="/saml/saml_login?next=/projects">{{ settings.LOGIN_SSO_TITLE }}</a>
-              <br/>
-              or &nbsp;
-              <br/>
+              <br/><br/>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;or &nbsp;
+              <br/><br/>
               {{ settings.LOGIN_SSO_COLLABORATOR_TITLE }}
               <br/>
             {% endif %}
