Fix context menu off screen problem, add Highlighter doc link, fix individual color adjust.

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -52,7 +52,7 @@
         <div class="container-fluid app-container">
             <div class="row">
                 <div class="col-auto align-self-center"><a href="/projects">Projects</a> &gt; <b>{{ project }}</b>&nbsp;({{ entries | length }} trees)</div>
-                <div class="col-auto mr-auto align-self-center"><button type="button" id="downloadproject" class="btn btn-outline-primary btn-sm">Download Project Files</button>
+                <div class="col-auto mr-auto align-self-center"><button type="button" id="downloadproject" class="btn btn-outline-primary btn-sm">Download Project Files</button>&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" class="highlighterdoc" href="https://www.hiv.lanl.gov/content/sequence/HIGHLIGHT/help.html">Highlighter plot explanation >></a>
                 </div>
             </div>
             {% if 'change_project' in context_perms %}
