--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -113,14 +113,15 @@
             $('.cluster-select').on('change', function() {
                 var clusterid = $(this).attr("id");
                 var id = clusterid.replace("cluster-", "");
+                var svg = $("#" + id).find("svg")[0];
+                //clear any prior results
+                d3.select(svg).selectAll(".cluster").each(function(d, i) {
+                    d3.select(this).remove();
+                });
+                $("#clusterlegend-" + id).html(buildClusterLegend(0));
+
                 var text = $("#" + clusterid + " option:selected").val();
-                if (text == "None") {
-                    var svg = $("#" + id).find("svg")[0];
-                    d3.select(svg).selectAll(".cluster").each(function(d, i) {
-                        d3.select(this).remove();
-                    });
-                    $("#clusterlegend-" + id).html(buildClusterLegend(0));
-                } else {
+                if (text != "None") {
                     var project = "{{ project }}";
                     showCluster(project, this.value, id);
                 }
